--- a/index.html
+++ b/index.html
@@ -321,7 +321,11 @@ HEAD
             <li class="mt-2"><strong>Purok Sison Elementary School</strong><br>Grade 3 – 6 (2014 – 2018)</li>
             <li class="mt-2"><strong>Melencio M. Castelo Elem. School</strong><br>Kinder – Grade 2 (2011 – 2014)</li>
             </ul>
+  <!--Resume-->
         </div>
+        <a href="resume/CALAGUI RESUME.pdf" target="_blank" class="btn btn-outline-primary mt-3">
+  <i class="fas fa-download"></i> Download Resume
+</a>
         <div class="mt-4">
             <h5>Connect with me:</h5>
             <div class="social-icons d-flex gap-3 fs-4 mt-2">
